--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,32 @@
 /* COMMON */
-body {}
-.page {}
+body {
+  margin: 0px;
+  padding: 0px;
+}
+.page {
+  background: url('/images/anonymous-server-background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
 
 
 
 
 /* HEADER */
 .page__header {}
-.nav-trigger {}
+.nav-trigger {
+  background: url('/images/ico-menu.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+  border: none;
+  color: transparent;
+  box-sizing: content-box;
+  padding: 20px 10px;
+  border-radius: 5px ;
+}
 
 
 
